Fixed layout issues on chrome.

--- a/JRPCServer/html/assets/css/custom-divs.css
+++ b/JRPCServer/html/assets/css/custom-divs.css
@@ -303,11 +303,11 @@ td.journeyModes
     width: 400px;
     float: left;
     padding-right: 25px;
-    padding-top: 30px;
+    padding-top: 60px;
 }
 .rightPanel
 {
-
+    margin-left: 450px;
 }
 
 div#divLoading
